--- a/starter-template/css/materialize.css
+++ b/starter-template/css/materialize.css
@@ -2311,6 +2311,10 @@ img {
   border: 0;
 }
 
+img.resize{
+    width:540px; /* you can use % */
+    height: auto;
+}
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
@@ -2750,7 +2754,7 @@ video.responsive-video {
 .parallax-container {
   position: relative;
   overflow: hidden;
-  height: 500px;
+  height: 350px;
 }
 
 .parallax {
@@ -2762,8 +2766,8 @@ video.responsive-video {
   z-index: -1;
 }
 
+
 .parallax img {
-  display: none;
   position: absolute;
   left: 50%;
   bottom: 0;
@@ -2773,6 +2777,7 @@ video.responsive-video {
   transform: translate3d(0, 0, 0);
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+
 }
 
 .pin-top, .pin-bottom {
@@ -7754,13 +7759,13 @@ input[type=range]:focus::-ms-fill-upper {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 500px;
   -webkit-perspective: 500px;
           perspective: 500px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-  -webkit-transform-origin: 0% 50%;
-          transform-origin: 0% 50%;
+  -webkit-transform-origin: 0% 80%;
+          transform-origin: 0% 80%;
 }
 
 .carousel.carousel-slider {
