First attempt at redirection
First attempt of redirecting results to another page using inline js
script.

--- a/starter-template/css/materialize.css
+++ b/starter-template/css/materialize.css
@@ -2880,11 +2880,10 @@ ul.staggered-list li {
 }
 
 footer.page-footer {
-  padding-top: 20px;
   background-color: #ee6e73;
+  width: 100%;
+  bottom: 0;
 }
-
-
 
 
 footer.page-footer .footer-copyright {
